# immoinvest

./: .gitignore  README.md  docker-compose copy.yml  docker-compose.yml  setup-folders.bat
audit-log-ms/: requirements.txt
audit-log-ms/src/: main.py
audit-log-ms/src/app/: api.py
audit-log-srv/: .dockerignore  pyproject.toml  requirements.txt
audit-log-srv/src/app/: api.py  database.py  routes.py  schemas.py
backend/: .dockerignore  Dockerfile  requirements.txt
company-srv/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
company-srv/src/: main.py  pyproject.toml
company-srv/src/app/: api.py  auth.py  database.py  routes.py  schemas.py  services.py
company-srv/src/app/database/: __init__.py  config.py
company-srv/src/app/database/models/: company.py  company_status.py  company_version.py
company-srv/src/app/routes/: company_routes.py  company_status_routes.py
company-srv/src/app/schemas/: __init__.py  company_schema.py  company_status_schema.py
company-srv/src/app/services/: __init__.py  company_service.py  company_status_service.py
company-srv/src/tests/: conftest.py  test_company_routes.py  test_company_status_routes.py  test_error_handling.py  test_version_management.py
company-srv/src/tests/unit/: conftest.py  test_models.py  test_services.py
db/: Dockerfile  docker-compose.test.yml
frontend/: .dockerignore  Dockerfile  docker-compose.yml  next.config.ts  tsconfig.json
infrastructure/: .gitignore  docker-compose.yml  requirements.txt
infrastructure/vault/: initial_seed.py
monitoring/: docker-compose.yml
(+6 files in other folders)
