[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "company-srv"
version = "0.1.0"
description = "Company Service"
requires-python = ">=3.8"

[tool.pytest.ini_options]
pythonpath = ["src"]

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"